# effectiveTransferTestTask

./: Cargo.toml  Readme.md
src/: main.rs
src/async/: mod.rs
src/sync/: mod.rs
