[package]
name = "effectiveTransferTestTask"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"

reqwest = {  version = "0.12.15", optional = true }
tokio = { version = "1.44.1", optional = true }
ureq = { version = "3.0.10", optional = true }

[features]
default = []
sync = ["ureq"]
async = ["reqwest", "tokio"]
