[package]
name = "effectiveTransferTestTask"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"

reqwest = {  version = "0.12.15" }
tokio = { version = "1.44.1", features = ["full"], optional = true }
futures = { version = "0.3.31", optional = true }

[features]
default = []
sync = ["reqwest/blocking"]
async = ["tokio", "futures"]
